<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Mind Painter</string>
    <string name="game_title">Mind Painter</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="input_hint">메세지를 입력해주세요</string>
    <string name="input_answer_hint">정답을 맞춰주세요!</string>
    <string name="send">전송</string>
    <string name="your_turn_question">당신의 차례 입니다.\n제시어를 결정하고 게임을 시작해주세요</string>
    <string name="not_your_turn_question">다른 플레이어가 제시어를 준비중입니다.\n잠시만 기다려주세요</string>
    <string name="new_question">새로운 제시어 받기</string>
    <string name="start_game">게임 시작하기</string>
    <string name="start_soon">곧 게임을 시작합니다</string>
    <string name="start">게임시작!</string>
    <string name="correctAnswer">정답입니다!</string>
    <string name="correctAnswerPlayer">%s 님께서\n정답을 맞추셨습니다!</string>
    <string name="incorrectAnswer">오답입니다!</string>
    <string name="evaluate">그림 평가</string>
    <string name="waiting_evaluate">당신의 그림을 평가하는 중입니다</string>
    <string name="evaluate_this_round">이번 라운드의 그림을 평가해주세요</string>
    <string name="good_sense">센스만점</string>
    <string name="soso">보통</string>
    <string name="bad">엉터리</string>
    <string name="finish_evaluate">평가완료\n잠시 후 다음 라운드가 시작됩니다</string>
    <string name="time_limit">시간초과</string>
    <string name="clear_all">모두지우기</string>
</resources>
